--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@ html {
 .body {
     margin: 0;
     padding: 0;
+    width: 100%;
 }
 
 .main {
@@ -28,6 +29,46 @@ span {
     color:#8C52FF;
 }
 
+/* buttons */
+.button {
+    appearance: none;
+    background-color: transparent;
+    border: 2px solid #8C52FF;
+    border-radius: 15px;
+    box-sizing: border-box;
+    color: #8C52FF;
+    cursor: pointer;
+    font-size: 1rem;
+    font-weight: 500;
+    line-height: normal;
+    margin: 0;
+    min-height: 60px;
+    min-width: 0;
+    outline: none;
+    padding: 0.5rem 2rem;
+    text-align: center;
+    text-decoration: none;
+    transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    will-change: transform;
+  }
+  
+  .button:disabled {
+    pointer-events: none;
+  }
+  
+  .button:hover {
+    color: #fff;
+    background-color: #8C52FF;
+  }
+  
+  .button:active {
+    box-shadow: none;
+    transform: translateY(0);
+  }
+
 
 /* header */
 
@@ -35,7 +76,7 @@ header {
     position: relative;
     z-index: 100;
     overflow: hidden;
-    height: 4.5rem;
+    min-height: 4.5rem;
     width: 100%;
 }
 
@@ -49,7 +90,6 @@ header {
     width: 12rem;
     float: left;
     margin: auto;
-    height: 100;
     
 }
 
@@ -74,6 +114,8 @@ nav .midNav li {
     display: inline;
     justify-content: center;
     align-items: center;
+    font-weight: 500;
+    font-size: 1.1rem;
 }
 
 
@@ -92,76 +134,74 @@ nav .midNav a {
 }
 
 nav .midNav a:hover {
-    color: #CB60EA;
+    color: gray;
     font-weight: 500;
 }
 
 
 /* login button nav (right)*/
 
-
-nav .loginNav ul {
+.loginNav {
     float: right;
-    text-align: center;
-    padding-right: 0.625rem;
+    display: flex;
+    flex-flow: row wrap;
+    align-items: center;
+    margin-top: 1.3rem;
+    font-family: 'Comfortaa';
+    font-size: 1rem;
+    gap: 2rem;
+
 }
 
-nav .loginNav a {
+.login{
+    align-self: center;
+    font-weight: 500;
     text-decoration: none;
-    text-align: center;
-    line-height: 1.6;
-    color: #8C52FF;
 }
 
 
-/* CSS */
-.button {
-  appearance: none;
-  background-color: transparent;
-  border: 2px solid #8C52FF;
-  border-radius: 15px;
-  box-sizing: border-box;
-  color: #8C52FF;
-  cursor: pointer;
-  font-size: 1rem;
-  font-weight: 500;
-  line-height: normal;
-  margin: 0;
-  min-height: 60px;
-  min-width: 0;
-  outline: none;
-  padding: 0.5rem 2rem;
-  text-align: center;
-  text-decoration: none;
-  transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-  will-change: transform;
+.login a{
+    text-decoration: none;
 }
 
-.button:disabled {
-  pointer-events: none;
+.login a:hover {
+    color: gray;
+    font-weight: 500;
 }
 
-.button:hover {
-  color: #fff;
-  background-color: #8C52FF;
-}
-
-.button:active {
-  box-shadow: none;
-  transform: translateY(0);
-}
-
-.mobile {
-    display: none;
+.signupButton{
+    align-self: center;
 }
 
 
-@media only screen and (max-width: 500px) {
-    
+#filledButton {
+    border: 1px solid #CB60EA;
+    background: #CB60EA;
+    color: white;
 }
+
+#filledButton:hover {
+    color:white;
+    background-color:#8C52FF
+  }
+
+
+
+/* mobile navigation */
+
+@media only screen and (max-width: 900px) {
+    .desktop {
+        display:none;
+    }
+}
+
+@media only screen and (min-width: 900px) {
+    .mobile {display: none;
+}
+}
+
+/* hamburger menu */
+
 
 /* hero section */
 
@@ -174,38 +214,31 @@ nav .loginNav a {
 }
 
 .splash {
-    padding-top: 4rem;
-    height: 80%;
     display: flex;
     justify-content: flex-start;
     align-items: flex-start;
     width: 100%;
-    max-width: 2100px;
+    height: 100%;
     
 }
 
 .heroStatementBox {
     padding-left: 5.25rem;
-    max-width: 1920px;
-
-
+    margin: auto;
 }
 
 .statementBox h2 {
-    font-size: 6.3rem;
+    font-size: clamp(2rem, 4.5rem, 6.3rem);
     font-family: 'Comfortaa', sans-serif;
     font-weight: bolder;
-    width: 100%;
-    margin-top: 15.0625rem;
-    margin-bottom: 1rem;
+    margin: auto;
     color: white;
-
-
 
 }
 
 .statementBox h2 span {
     color: #8C52FF;
+
 }
 
 .statementBox h3 {
@@ -213,9 +246,8 @@ nav .loginNav a {
     font-family: 'Maven Pro', sans-serif;
     font-weight: 500;
     width: 100%;
-    margin: 0 auto;
-    line-height: 2.4rem;
     color: white;
+    margin-top: 1rem;
     
 }
 
@@ -223,26 +255,45 @@ nav .loginNav a {
     color: #8C52FF;
 }
 
-#statemenetButton {
+#statementButton {
     line-height: 5rem;
     border-color: white;
     color: white;
 }
 
-.heroImage {
-    margin-top: 3rem;
-    display: inline-flex;
-    height: 60rem;
 
+.heroImage img{
+    margin-top: 3rem;
+    display: flex;
+    height: auto;
+    max-width: 100%;
+    flex-shrink: 1;
+    margin-right: 20rem;
 }
 
-@media only screen and (min-width: 1920px) {
-    .splah .heroImage {
-        float: left;
-        height: 50px;
+/* hero mobile */
+
+@media only screen and (max-width: 900px) {
+    .body{
+        display: block;
+        width: 100%;
+        position: relative;
+    }
+    
+    .heroStatementBox {
+        display: block;
+        width: 100%;
+        margin: auto;
+        position:inherit;
+
+
+
+    }
+    
+    .heroImage img {
+        display: none;
     }
 }
-
 
 /* products */
 
@@ -257,7 +308,6 @@ nav .loginNav a {
     display: flex;
     justify-content: flex-start;
     align-items: flex-start;
-    width: 100%;
     padding-top: 5rem;
     padding-bottom: 1rem;
     height: 100%;
@@ -268,9 +318,9 @@ nav .loginNav a {
     display: relative;
     font-family: "Maven Pro", sans-serif;
     color: #494949;
-    width: 62.5rem;
-    height: 25rem;
-    margin: auto 0 auto 12rem;
+    min-height: 25rem;
+    max-width: 53rem;
+    margin: auto 0 auto 5rem;
 }
 
 .productBoarder {
@@ -288,7 +338,7 @@ nav .loginNav a {
 }
 
 .productText h2 {
-    font-size: 6rem;
+    font-size: clamp(2rem, 5rem, 6rem);
     font-family: "Comfortaa", sans-serif;
     font-weight: bolder;
     width: 100%;
@@ -319,17 +369,25 @@ nav .loginNav a {
     max-width: 100%;
 }
 
+.imageCenter {
+    align-self: center;
+    padding-left: 3rem;
+    }
+
+
 .productBlock img {
     display: flex;
-    flex-shrink: 1;
+    max-width: 100%;
     margin: auto;
+    align-self: center;
 }
+
 
 #productLeft{
     display: flex;
     flex-shrink: 1;
-    margin: auto 0 auto 12rem;
-    height: 54.3125rem;
+    margin: auto 0 auto 5rem;
+    max-height: 60rem; 
 }
 
 .learnImage {
@@ -339,8 +397,8 @@ nav .loginNav a {
 
 .teamBlock {
     padding-top: 3rem;
-    margin-left: 8rem;
-    margin-bottom: 3rem;
+    margin-left: 3rem;
+    margin-right: 3rem;
     border-top: 1px solid rgba(140, 82, 255, 0.1);
 
 }
@@ -360,33 +418,12 @@ nav .loginNav a {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: auto;
-    gap: 1rem;
+    gap: 3rem;
     margin-top: 5rem;
 }
 
 .cardCenter { 
     justify-items: center;
-    text-align: center;
-}
-
-
-.gridCardFrist {
-    display:flex;
-    grid-column: 1 / 2;
-    grid-row: 1;
-
-}
-
-.gridCardSecond {
-    display:flex;
-    grid-column: 2 / 3;
-    grid-row: 1;
-}
-
-.gridCardThird {
-    display:flex;
-    grid-column: 3 / 4;
-    grid-row: 1;
 }
 
 .teamGrid h4 {
@@ -405,14 +442,55 @@ nav .loginNav a {
     line-height: 1.5rem;
     font-family: 'Maven Pro', sans-serif;
     font-weight: 400;
-    width: 100%;
-    margin-top: 1rem;
+    max-width: 80%;
     color:  #494949;
-    max-width: 90%;
+}
+
+
+
+.gridCardFrist img{
+    display:flex;
+    max-width: 100%;
+    margin: auto;
+    align-self: center;
+    grid-column: 1 / 2;
+    grid-row: 1;
+    margin: auto;
+
+}
+
+.gridCardSecond img{
+    display:flex;
+    max-width: 100%;
+    margin: auto;
+    align-self: center;
+    grid-column: 2 / 3;
+    grid-row: 1;
+}
+
+.gridCardThird img{
+    display:flex;
+    max-width: 100%;
+    margin: auto;
+    align-self: center;
+    grid-column: 3 / 4;
+    grid-row: 1;
 }
 
 /* footer */
 
+footer div {
+    display: flex;
+    height: 15rem;
+    margin-top: 3rem;
+    background: url(./resources/images/backgroundImage3.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    line-height: 1.3;
+    font-family: "Comfortaa";
+  }
+  
 
 .footLinks ul {
     display: inline-grid;
@@ -421,7 +499,7 @@ nav .loginNav a {
     justify-items: center;
     margin: auto;
   }
-  
+   
   @media (min-width: 500px) {
     ul {
       grid-auto-flow: column;
@@ -431,13 +509,16 @@ nav .loginNav a {
 .footLinks  a {
     color: white;
     text-decoration: none;
-    box-shadow: inset 0 -1px 0 hsla(0, 0%, 100%, 0.4);
   }
   
 .footLinks a:hover {
     box-shadow: inset 0 -1.2em 0 hsla(0, 0%, 100%, 0.4);
   }
-  
+
+  .footLinks li p {
+    margin: 0;
+  }
+
 .footLinks li:last-child {
     grid-column: 1 / 2;
     grid-row: 1 / 2;
@@ -447,17 +528,7 @@ nav .loginNav a {
     animation: wave-animation 0.3s infinite;
   }
   
-  /* below is just for demo styling */
-  
-footer div {
-    display: flex;
-    height: 15rem;
-    width: 100%;
-    background-color:#8C52FF;
-    line-height: 1.3;
-    font-family: "Comfortaa";
-  }
-  
+
   @keyframes wave-animation {
     0%,
     100% {
